--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     url(images/background-img.jpeg);
   background-position: center;
   background-size: cover;
-  height: 90vh;
+  height: 100vh;
 }
 
 .nav {
@@ -19,6 +19,10 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   background: #fff;
   box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.3);
 }
@@ -46,7 +50,7 @@ body {
 }
 
 .main-con {
-  margin: 40px auto;
+  margin: 70px auto 30px;
   width: 90%;
 }
 
@@ -55,7 +59,6 @@ body {
   align-items: center;
   justify-content: space-between;
   color: #fff;
-  position: relative;
 }
 
 .main-con .home-text h1 {
@@ -93,7 +96,7 @@ body {
 }
 
 .home-img {
-  flex-basis: 40%;
+  flex-basis: 30%;
 }
 
 .home-img img {
@@ -171,9 +174,6 @@ button {
 }
 
 @media screen and (max-width: 950px) {
-  .header {
-    height: 60vh;
-  }
   .login-con {
     width: 300px;
     padding: 5%;
@@ -194,25 +194,11 @@ button {
   .login-con button {
     font-size: 18px;
   }
-  .logo img {
-    width: 8%;
-  }
 
   .get-started button {
     padding: 5px;
     font-size: 16px;
     font-weight: 500;
-  }
-  .main-con {
-    width: 80%;
-  }
-
-  .main-con .home-text h1 {
-    font-size: 30px;
-  }
-
-  .main-con .home-text p {
-    font-size: 20px;
   }
 
   .home-btn button {
@@ -223,28 +209,19 @@ button {
   }
 }
 
-@media screen and (max-width: 800px) {
-  .main-con .home-text h1 {
-    font-size: 16px;
-  }
-
-  .main-con .home-text p {
-    font-size: 15px;
+@media screen and (max-width: 830px) {
+  .main-con .home-con {
+    flex-direction: column;
   }
   .home-img img {
-    position: absolute;
-    top: 10%;
-    width: 30%;
+    max-width: 60%;
   }
 }
-
 @media screen and (max-width: 650px) {
   .login-con {
     padding: 6% 5%;
   }
-  .header {
-    height: 55vh;
-  }
+
   .get-started button {
     padding: 4px;
     font-size: 14px;
@@ -253,10 +230,12 @@ button {
 
   .main-con .home-text h1 {
     font-size: 17px;
+    margin-top: 20px;
   }
 
   .main-con .home-text p {
     font-size: 15px;
+    margin-top: 20px;
   }
 
   .home-btn button {
@@ -264,26 +243,30 @@ button {
     font-size: 12px;
     font-weight: 400;
   }
+
+  .home-img img {
+    max-width: 40%;
+    max-width: 40%;
+  }
 }
 
 @media screen and (max-width: 465px) {
   .header {
-    height: 45vh;
+    height: 80vh;
   }
   .login-con {
     padding: 10% 1%;
   }
-  .home-img img {
-    width: 20%;
-    top: 60%;
-    right: 2%;
-  }
+
   .main-con .home-text h1 {
     font-size: 16px;
+    margin-top: 30px;
   }
 
   .main-con .home-text p {
     font-size: 14px;
+    margin-top: 30px;
+
     letter-spacing: 1px;
   }
 }
@@ -292,9 +275,7 @@ button {
   .logo img {
     width: 15%;
   }
-  .main-con .home-con {
-    margin-top: -40px;
-  }
+
   p,
   h1 {
     font-size: 10px;
@@ -444,7 +425,8 @@ button {
 }
 .user-text.active-text {
   display: block;
-  animation: moveup 0.5s linear forwards;
+
+  /* animation: moveup 0.5s linear forwards; */
 }
 .user-text span {
   font-weight: 700;
@@ -481,7 +463,6 @@ button {
     width: 80%;
     max-width: 800px;
     padding: 7px 15px;
-    margin-top: -20px;
   }
 
   .testimonial-con h1 {
