--- a/menu.css
+++ b/menu.css
@@ -3,15 +3,19 @@ body {
   padding: 0;
   box-sizing: border-box;
   font-family: "poppins", sans-serif;
+  background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
+    url(images/background-img.jpeg);
+  background-position: center;
+  background-size: cover;
 }
 
 .header {
-  background-color: #777;
   position: sticky;
   left: 0;
   right: 0;
   top: 0;
   z-index: 999;
+  background-color: #000000;
 }
 .header-flex {
   display: flex;
@@ -54,13 +58,6 @@ body {
   margin-left: -8px;
 }
 
-.header .right-header {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  padding: 0px 2px;
-}
-
 .header .right-header .count p {
   background-color: orangered;
   padding: 2px 8px;
@@ -77,7 +74,7 @@ body {
 
 @media screen and (max-width: 600px) {
   .header img {
-    width: 50px;
+    width: 40px;
   }
 
   .header .middle-header input {
@@ -106,20 +103,52 @@ body {
   }
 }
 
-/*------------------------main styling start------------------------------*/
+@media (max-width: 575px) {
+  .header img {
+    width: 25px;
+  }
+}
 
-.menu-con {
-  padding: 40px;
-  background-color: #f0f0f0;
+/*------------------------main styling start------------------------------*/
+.main {
+  margin-top: 60px;
+  padding: 20px;
 }
 
 .menu-grid {
   display: grid;
-  place-items: center;
   grid-template-columns: repeat(4, 1fr);
-  column-gap: 20px;
-  row-gap: 20px;
+  column-gap: 10px;
+  row-gap: 15px;
 }
+
+@media (max-width: 850px) {
+  .menu-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .menu-item {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    padding: 10px;
+    text-align: center;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    width: 300px;
+  }
+}
+
+@media (max-width: 575px) {
+  .menu-grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .menu-item button {
+    padding: 4px;
+    font-size: 16px;
+  }
+}
+
 .menu-item {
   background-color: #fff;
   border: 1px solid #ccc;
@@ -127,7 +156,7 @@ body {
   text-align: center;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
-  width: 250px;
+  width: 280px;
 }
 
 .menu-item .food-details {
@@ -170,25 +199,4 @@ body {
   font-weight: bold;
   color: #ff5722;
   font-size: 1.2rem;
-}
-
-@media (max-width: 1000px) {
-  .menu-grid {
-    grid-template-columns: repeat(4, 1fr);
-  }
-}
-
-@media (max-width: 800px) {
-  .menu-grid {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
-
-@media (max-width: 575px) {
-  .header img {
-    width: 25px;
-  }
-  .menu-grid {
-    grid-template-columns: 1fr;
-  }
 }
