--- a/menu.css
+++ b/menu.css
@@ -21,7 +21,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0px 20px;
+  padding: 0px 10px;
 }
 
 .left-header button {
@@ -79,7 +79,7 @@ body {
 
   .header .middle-header input {
     padding: 6px 10px;
-    width: 70%;
+    width: 80%;
   }
 
   .header .middle-header .search img {
@@ -119,7 +119,7 @@ body {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   column-gap: 10px;
-  row-gap: 15px;
+  row-gap: 20px;
   place-items: center;
 }
 
@@ -148,6 +148,11 @@ body {
     padding: 4px;
     font-size: 16px;
   }
+
+  .menu-item img {
+    max-width: 90%;
+    max-height: 90%;
+  }
 }
 
 .menu-item {
@@ -157,7 +162,7 @@ body {
   text-align: center;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
-  width: 300px;
+  width: 280px;
 }
 
 .menu-item .food-details {
