--- a/menu.css
+++ b/menu.css
@@ -140,13 +140,26 @@ body {
 }
 
 @media (max-width: 575px) {
-  .menu-grid {
-    grid-template-columns: repeat(1, 1fr);
+  .main {
+    margin-top: 20px;
+    padding: 5px;
   }
-
+  .menu-grid {
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 5px;
+  }
+  .menu-item {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    padding: 10px;
+    text-align: center;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    width: 150px;
+  }
   .menu-item button {
-    padding: 4px;
-    font-size: 16px;
+    padding: 3px;
+    font-size: 14px;
   }
 
   .menu-item img {
