--- a/menu.css
+++ b/menu.css
@@ -142,10 +142,10 @@ body {
 @media (max-width: 575px) {
   .main {
     margin-top: 20px;
-    padding: 5px;
+    padding: 2px;
   }
   .menu-grid {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     column-gap: 5px;
   }
   .menu-item {
@@ -155,7 +155,7 @@ body {
     text-align: center;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
-    width: 150px;
+    width: 200px;
   }
   .menu-item button {
     padding: 3px;
@@ -165,6 +165,10 @@ body {
   .menu-item img {
     max-width: 90%;
     max-height: 90%;
+  }
+
+  .menu-item .food-details {
+    margin-top: -10px;
   }
 }
 
